paginas agregas con burgerMenu

--- a/PAGINAS/PoliticasDeCambio.html
+++ b/PAGINAS/PoliticasDeCambio.html
@@ -27,39 +27,44 @@
             <button class="encabezadoGeneral__sectionDos__button buttonHeader"><a target="_blank" href="/PAGINAS/inciarSesion.html">Iniciar Sesion</a></button>
             <button class="encabezadoGeneral__sectionDos__button buttonHeader"><a target="_blank" href="/PAGINAS/contacto.html">Contactenos</a></button>
         </div>
-        <!--TITULO HEADER-->
-        <div class="encabezadoGeneral__sectionTres">
-            <h1>
-                <a class="encabezadoGeneral__sectionTres__tituloPrincipal" href="/index.html">Chilos Clothe & Fragance</a>
-            </h1>
-        </div>
-        <!--LISTA MENU-->
-        <nav class="encabezadoGeneral__contenedorListaMenu">
-            <ul class="encabezadoGeneral__contenedorListaMenu__listaMenu" >
-                <li>
-                    <a href="/index.html">Inicio</a> 
-                </li>
-                <li class="productos">
-                    <a href="/PAGINAS/productos.html">Productos</a>
-                    <ul class="subMenu">
+            <!--TITULO HEADER-->
+            <div class="encabezadoGeneral__sectionTres">
+                <img  class="imagenLogoTipo" src="./IMAGENES/logoTipo.png">
+                <h1>
+                    <a class="encabezadoGeneral__sectionTres__tituloPrincipal" href="./index.html">Chilos Clothe & Fragance</a>
+                </h1>
+            </div>
+            <!--LISTA MENU-->
+            <div  class="encabezadoGeneral__contenedorListaMenu navPrincipal ">
+                <input type="checkbox" id="btn-menu">
+                <label for="btn-menu"><img src="./IMAGENES/menuBurger.jpg" ></label>
+                <nav class="menu">
+                    <ul class="encabezadoGeneral__contenedorListaMenu__listaMenu " >
                         <li>
-                            <a href="/PAGINAS/conjunto.html">Conjunto</a>
+                            <a href="./index.html">Inicio</a> 
+                        </li>
+                        <li class="productos">
+                            <a href="./PAGINAS/productos.html">Productos</a>
+                            <ul class="subMenu">
+                                <li>
+                                    <a href="./PAGINAS/conjunto.html">Conjunto</a>
+                                </li>
+                                <li>
+                                    <a href="./PAGINAS/pijama.html">Pijama</a>
+                                </li>
+                                <li>
+                                    <a href="./PAGINAS/aromas.html">Aromas</a>
+                                </li>
+                            </ul>
                         </li>
                         <li>
-                            <a href="/PAGINAS/pijama.html">Pijama</a>
-                        </li>
+                            <a href="./PAGINAS/Envios.html">Envíos</a>
                         <li>
-                            <a href="/PAGINAS/aromas.html">Aromas</a>
+                            <a href="./PAGINAS/PoliticasDeCambio.html">Políticas de cambio</a>
                         </li>
-                        </ul>
-                </li>
-                <li>
-                    <a href="/PAGINAS/Envios.html">Envíos</a>
-                <li>
-                    <a href="/PAGINAS/PoliticasDeCambio.html">Políticas de cambio</a>
-                </li>
-            </ul>
-        </nav>
+                    </ul>
+                </nav>
+            </div>
     </header>
         <main class="mainGeneral dos">
             <div class="d-grid gap-2">
