modificacion visibilidad logo tipo en pagina web aromas

--- a/PAGINAS/aromas.html
+++ b/PAGINAS/aromas.html
@@ -29,7 +29,7 @@
         </div>
             <!--TITULO HEADER-->
             <div class="encabezadoGeneral__sectionTres">
-                <img  class="imagenLogoTipo" src="./IMAGENES/logoTipo.png">
+                <img  class="imagenLogoTipo" src="../IMAGENES/logoTipo.png">
                 <h1>
                     <a class="encabezadoGeneral__sectionTres__tituloPrincipal" href="./index.html">Chilos Clothe & Fragance</a>
                 </h1>
