--- a/PAGINAS/aromas.html
+++ b/PAGINAS/aromas.html
@@ -23,44 +23,44 @@
         </div>
         <!--BOTONES HEADER-->
         <div class="encabezadoGeneral__sectionDos">
-            <button class="encabezadoGeneral__sectionDos__button buttonHeader"><a target="_blank" href="/PAGINAS/registrarse.html">Registrarse</a></button>
-            <button class="encabezadoGeneral__sectionDos__button buttonHeader"><a target="_blank" href="/PAGINAS/inciarSesion.html">Iniciar Sesion</a></button>
-            <button class="encabezadoGeneral__sectionDos__button buttonHeader"><a target="_blank" href="/PAGINAS/contacto.html">Contactenos</a></button>
+            <button class="encabezadoGeneral__sectionDos__button buttonHeader"><a target="_blank" href="./registrarse.html">Registrarse</a></button>
+            <button class="encabezadoGeneral__sectionDos__button buttonHeader"><a target="_blank" href="./inciarSesion.html">Iniciar Sesion</a></button>
+            <button class="encabezadoGeneral__sectionDos__button buttonHeader"><a target="_blank" href="./contacto.html">Contactenos</a></button>
         </div>
             <!--TITULO HEADER-->
             <div class="encabezadoGeneral__sectionTres">
                 <img  class="imagenLogoTipo" src="../IMAGENES/logoTipo.png">
                 <h1>
-                    <a class="encabezadoGeneral__sectionTres__tituloPrincipal" href="./index.html">Chilos Clothe & Fragance</a>
+                    <a class="encabezadoGeneral__sectionTres__tituloPrincipal" href="../index.html">Chilos Clothe & Fragance</a>
                 </h1>
             </div>
             <!--LISTA MENU-->
             <div  class="encabezadoGeneral__contenedorListaMenu navPrincipal ">
                 <input type="checkbox" id="btn-menu">
-                <label for="btn-menu"><img src="./IMAGENES/menuBurger.jpg" ></label>
+                <label for="btn-menu"><img src="../IMAGENES/menuBurger.jpg" ></label>
                 <nav class="menu">
                     <ul class="encabezadoGeneral__contenedorListaMenu__listaMenu " >
                         <li>
-                            <a href="./index.html">Inicio</a> 
+                            <a href="../index.html">Inicio</a> 
                         </li>
                         <li class="productos">
-                            <a href="./PAGINAS/productos.html">Productos</a>
+                            <a href="./productos.html">Productos</a>
                             <ul class="subMenu">
                                 <li>
-                                    <a href="./PAGINAS/conjunto.html">Conjunto</a>
+                                    <a href="./conjunto.html">Conjunto</a>
                                 </li>
                                 <li>
-                                    <a href="./PAGINAS/pijama.html">Pijama</a>
+                                    <a href="./pijama.html">Pijama</a>
                                 </li>
                                 <li>
-                                    <a href="./PAGINAS/aromas.html">Aromas</a>
+                                    <a href="./aromas.html">Aromas</a>
                                 </li>
                             </ul>
                         </li>
                         <li>
-                            <a href="./PAGINAS/Envios.html">Envíos</a>
+                            <a href="./Envios.html">Envíos</a>
                         <li>
-                            <a href="./PAGINAS/PoliticasDeCambio.html">Políticas de cambio</a>
+                            <a href="./PoliticasDeCambio.html">Políticas de cambio</a>
                         </li>
                     </ul>
                 </nav>
@@ -135,12 +135,12 @@
                 <p>Medios de pago</p>
                 <div class="d-flex flex-wrap">
                     <ul class=" d-flex footerGeneral__mediosDePago__listaFooter">
-                        <li><img src="/IMAGENES/tarjetaBancoFrances.jpg"></li>
-                        <li><img src="/IMAGENES/tarjetaMastercard.png"></li>
-                        <li><img src="/IMAGENES/tarjetaNaranja.jpg"></li>
-                        <li><img src="/IMAGENES/tarjetaSantanderRio.png"></li>
-                        <li><img src="/IMAGENES/tarjetaVisa.jpg"></li>
-                        <li><img src="/IMAGENES/rapipago.png"></li>
+                        <li><img src="../IMAGENES/tarjetaBancoFrances.jpg"></li>
+                        <li><img src="../IMAGENES/tarjetaMastercard.png"></li>
+                        <li><img src="../IMAGENES/tarjetaNaranja.jpg"></li>
+                        <li><img src="../IMAGENES/tarjetaSantanderRio.png"></li>
+                        <li><img src="../IMAGENES/tarjetaVisa.jpg"></li>
+                        <li><img src="../IMAGENES/rapipago.png"></li>
                     </ul>
                 </div>
         </div>
