modificaciones para 4 entrega proyecto final

--- a/PAGINAS/aromas.html
+++ b/PAGINAS/aromas.html
@@ -66,7 +66,7 @@
                 </nav>
             </div>
     </header>
-    <main class="mainGeneral dos"> 
+    <main class=" container mainGeneral dos"> 
         <h2 class="mainGeneral__tituloProductoConjuntoPijamaAroma">Aromas</h2>
         <div class="mainGeneral__contenedorConjunto">
             <div class="mainGeneral__contenedorConjunto__conjunto Uno">
