--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </nav>
             </div>
         </header>
-        <main class="mainGeneral dos  ">
+        <main class=" container mainGeneral dos  ">
             <div class="contenedorCarrouselSoloInicio">
                 <div class=" container mainGeneral__mainInicio">
                     <h2>Bienvenidos</h2>
