--- a/PAGINAS/conjunto.html
+++ b/PAGINAS/conjunto.html
@@ -66,7 +66,7 @@
                 </nav>
             </div>
     </header>
-    <main class="mainGeneral dos"> 
+    <main class=" container mainGeneral dos  ">
         <h2 class="mainGeneral__tituloProductoConjuntoPijamaAroma">Conjuntos</h2>
         <div class="mainGeneral__contenedorConjunto">
             <div class="mainGeneral__contenedorConjunto__conjunto Uno">
@@ -159,7 +159,7 @@
             </ul>
         </div>
     </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>          
 </html>
