--- a/PAGINAS/pijama.html
+++ b/PAGINAS/pijama.html
@@ -66,7 +66,7 @@
                 </nav>
             </div>
     </header>
-        <main class="mainGeneral dos"> 
+    <main class=" container mainGeneral dos  ">
                 <h2 class="mainGeneral__tituloProductoConjuntoPijamaAroma">Pijamas</h2>
                 <div class="mainGeneral__contenedorConjunto">
                     <div class="mainGeneral__contenedorConjunto__conjunto Uno">
@@ -124,8 +124,8 @@
                         <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
                     </div>
                 </div>
-        </main>
-        <footer class="footerGeneral tres ">
+    </main>
+    <footer class="footerGeneral tres ">
             <div class="footerGeneral__veniAConocernos">
                 <p>¡Vení a conocernos!</p>
                 <iframe class="footerGeneral__veniAConocernos__googleMaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.8214633243174!2d-58.63167448447453!3d-34.63395178045155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb8bc768e1ea5%3A0x292c54382e196f96!2sPlaza%20Oeste%20Shopping!5e0!3m2!1ses!2sar!4v1633564318994!5m2!1ses!2sar"
@@ -158,7 +158,7 @@
                     </li>
                 </ul>
             </div>
-        </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>          
 </html>
