retoques entrega final

--- a/PAGINAS/aromas.html
+++ b/PAGINAS/aromas.html
@@ -73,55 +73,55 @@
                 <img src="../IMAGENES/aroma1.jpg" alt="foto">
                 <h2>Aromatizador Fresh</h2>
                 <h3>$670</h3>
-                <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
+                <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
             </div>
             <div class="mainGeneral__contenedorConjunto__conjunto Dos">
                 <img src="../IMAGENES/aroma2.jpg" alt="foto">
                 <h2>Vela Aromática Rosas</h2>
                 <h3>$700</h3>
-                <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
+                <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
             </div>
             <div class="mainGeneral__contenedorConjunto__conjunto Tres">
                 <img src="../IMAGENES/aroma3.jpg" alt="foto">
                 <h2>Aromatizador Flores Blancas</h2>
                 <h3>$850</h3>
-                <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
+                <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
             </div>
             <div class="mainGeneral__contenedorConjunto__conjunto Cuatro">
                 <img src="../IMAGENES/aroma4.jpg.jpeg" alt="foto">
                 <h2>Aromatizador Sunshine</h2>
                 <h3>$660</h3>
-                <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
+                <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
             </div>
             <div class="mainGeneral__contenedorConjunto__conjunto Cinco">
                 <img src="../IMAGENES/aroma5.jpeg" alt="foto">
                 <h2>Vela Aromática + Perfume Euphoria</h2>
                 <h3>$1500</h3>
-                <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
+                <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
             </div>
             <div class="mainGeneral__contenedorConjunto__conjunto Seis">
                 <img src="../IMAGENES/aroma6.jpg" alt="foto">
                 <h2>Aromatizador Classique </h2>
                 <h3>$770</h3>
-                <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
+                <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
             </div>
             <div class="mainGeneral__contenedorConjunto__conjunto Siete">
                 <img src="../IMAGENES/aroma7.jpg" alt="foto">
                 <h2>Aromatizador Stories  </h2>
                 <h3>$810</h3>
-                <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
+                <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
             </div>
             <div class="mainGeneral__contenedorConjunto__conjunto Ocho">
                 <img src="../IMAGENES/aroma8.jpg" alt="foto">
                 <h2>Vela Aromática Sky + Perfume Miracle</h2>
                 <h3>$1700</h3>
-                <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
+                <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
             </div>
             <div class="mainGeneral__contenedorConjunto__conjunto Nueve">
                 <img src="../IMAGENES/aroma9.jpg" alt="foto">
                 <h2>Aromatizador White Mountain</h2>
                 <h3>$910</h3>
-                <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
+                <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
             </div>
         </div>
     </main>
