--- a/PAGINAS/pijama.html
+++ b/PAGINAS/pijama.html
@@ -73,55 +73,55 @@
                         <img src="../IMAGENES/pijama1.jpg" alt="foto">
                         <h2>Conjunto Pijama Star blue</h2>
                         <h3>$3300</h3>
-                        <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
+                        <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
                     </div>
                     <div class="mainGeneral__contenedorConjunto__conjunto Dos">
                         <img src="../IMAGENES/pijama2.jpg" alt="foto">
                         <h2> Conjunto Pijama dogs</h2>
                         <h3>$2300</h3>
-                        <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
+                        <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
                     </div>
                     <div class="mainGeneral__contenedorConjunto__conjunto Tres">
                         <img src="../IMAGENES/pijama3.jpg" alt="foto">
                         <h2>Conjunto Pijama Star pink</h2>
                         <h3>$3000</h3>
-                        <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
+                        <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
                     </div>
                     <div class="mainGeneral__contenedorConjunto__conjunto Cuatro">
                         <img src="../IMAGENES/pijama4.jpg" alt="foto">
                         <h2>Camisolín gris</h2>
                         <h3>$5000</h3>
-                        <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
+                        <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
                     </div>
                     <div class="mainGeneral__contenedorConjunto__conjunto Cinco">
                         <img src="../IMAGENES/pijama5.jpg" alt="foto">
                         <h2>Bata Elise Alas Rosa </h2>
                         <h3>$3600</h3>
-                        <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
+                        <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
                     </div>
                     <div class="mainGeneral__contenedorConjunto__conjunto Seis">
                         <img src="../IMAGENES/pijama6,1.jpg" alt="foto">
                         <h2>Conjunto Pijama Pink</h2>
                         <h3>$3600</h3>
-                        <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
+                        <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
                     </div>
                     <div class="mainGeneral__contenedorConjunto__conjunto Siete">
                         <img src="../IMAGENES/pijama6.jpg" alt="foto">
                         <h2>Titulo</h2>
                         <h3>$5000</h3>
-                        <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
+                        <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
                     </div>
                     <div class="mainGeneral__contenedorConjunto__conjunto Ocho">
                         <img src="../IMAGENES/pijama11.jpg" alt="foto">
                         <h2>Titulo</h2>
                         <h3>$5000</h3>
-                        <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
+                        <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
                     </div>
                     <div class="mainGeneral__contenedorConjunto__conjunto Nueve">
                         <img src="../IMAGENES/pijama8.jpg" alt="foto">
                         <h2>Titulo</h2>
                         <h3>$5000</h3>
-                        <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
+                        <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
                     </div>
                 </div>
     </main>
