--- a/PAGINAS/productos.html
+++ b/PAGINAS/productos.html
@@ -73,25 +73,25 @@
                 <img src="../IMAGENES/conjunto1.png" alt="foto">
                 <h2>Conjunto Berlín rojo</h2>
                 <h3>$2300</h3>
-                <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
+                <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
             </div>
             <div class="mainGeneral__contenedorConjunto__conjunto Dos">
                 <img src="../IMAGENES/conjunto2.png" alt="foto">
                 <h2>Conjunto Sherryl natural</h2>
                 <h3>$2700</h3>
-                <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
+                <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
             </div>
             <div class="mainGeneral__contenedorConjunto__conjunto Tres">
                 <img src="../IMAGENES/conjunto3.jpg" alt="foto">
                 <h2>Conjunto Hailey negro</h2>
                 <h3>$3000</h3>
-                <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
+                <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
             </div>
             <div class="mainGeneral__contenedorConjunto__conjunto Cuatro">
                 <img src="../IMAGENES/pijama1.jpg" alt="foto">
                 <h2>Conjunto Pijama Star Blue</h2>
                 <h3>$3300</h3>
-                <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
+                <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
             </div>
             <div class="mainGeneral__contenedorConjunto__conjunto Cinco">
                 <img src="../IMAGENES/pijama2.jpg" alt="foto">
@@ -102,26 +102,25 @@
             <div class="mainGeneral__contenedorConjunto__conjunto Seis">
                 <img src="../IMAGENES/pijama3.jpg" alt="foto">
                 <h2>Conjunto Pijama Star Pink</h2>
-                <h3>$3000</h3>
-                <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
+                <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
             </div>
             <div class="mainGeneral__contenedorConjunto__conjunto Siete">
                 <img src="../IMAGENES/aroma1.jpg" alt="foto">
                 <h2>Aromatizador Fresh</h2>
                 <h3>$670</h3>
-                <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
+                <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
             </div>
             <div class="mainGeneral__contenedorConjunto__conjunto Ocho">
                 <img src="../IMAGENES/aroma2.jpg" alt="foto">
                 <h2>Vela Aromática Rosas</h2>
                 <h3>$700</h3>
-                <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
+                <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
             </div>
             <div class="mainGeneral__contenedorConjunto__conjunto Nueve">
                 <img src="../IMAGENES/aroma3.jpg" alt="foto">
                 <h2>Aromatizador Flores Blancas</h2>
                 <h3>$850</h3>
-                <button class="mainGeneral__contenedorConjunto__button">Comprar</button>
+                <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
             </div>
         </div>
     </main>
