agregar nuevo footer a todas las paginas web

--- a/PAGINAS/Envios.html
+++ b/PAGINAS/Envios.html
@@ -100,38 +100,66 @@
             </div>
     </main>
     <footer class="footerGeneral tres ">
-            <div class="footerGeneral__veniAConocernos">
-                <p>¡Vení a conocernos!</p>
-                <iframe class="footerGeneral__veniAConocernos__googleMaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.8214633243174!2d-58.63167448447453!3d-34.63395178045155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb8bc768e1ea5%3A0x292c54382e196f96!2sPlaza%20Oeste%20Shopping!5e0!3m2!1ses!2sar!4v1633564318994!5m2!1ses!2sar"
-                style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </div>
-            <div class="footerGeneral__mediosDePago">
-                    <p>Medios de pago</p>
-                    <div class="d-flex flex-wrap">
-                        <ul class=" d-flex footerGeneral__mediosDePago__listaFooter">
-                            <li><img src="../IMAGENES/tarjetaBancoFrances.jpg"></li>
-                            <li><img src="../IMAGENES/tarjetaMastercard.png"></li>
-                            <li><img src="../IMAGENES/tarjetaNaranja.jpg"></li>
-                            <li><img src="../IMAGENES/tarjetaSantanderRio.png"></li>
-                            <li><img src="../IMAGENES/tarjetaVisa.jpg"></li>
-                            <li><img src="../IMAGENES/rapipago.png"></li>
+        <div class="container">
+            <footer class="py-5">
+                <div class="row">
+                    <div class="col-2">
+                        <h5>Site Map</h5>
+                        <ul class="nav flex-column">
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
                         </ul>
                     </div>
-            </div>
-            <div  class="footerGeneral__mediosComunicacion">
-                <p>Medios de comunicación</p>
-                <ul class="footerGeneral__mediosComunicacion__listaFooter">
-                    <li>
-                        <a href=""><i class="fab fa-instagram"></i></a>
-                    </li>
-                        <li>
-                        <a  href ="mailto: ignaciomelo25@gmail.com" title="Enviar Correo a Ignacio Melo">Enviar email</a>
-                    </li>
-                    <li>
-                        <a href=""><i class="fab fa-facebook"></i></a>
-                    </li>
-                </ul>
-            </div>
+                    <div class="col-2">
+                        <h5>Section</h5>
+                        <ul class="nav flex-column">
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-2">
+                        <h5>Section</h5>
+                        <ul class="nav flex-column">
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-4 offset-1">
+                        <form>
+                            <h5>Subscribe to our newsletter</h5>
+                            <p>Monthly digest of whats new and exciting from us.</p>
+                            <div class="d-flex w-100 gap-2">
+                                <label for="newsletter1" class="visually-hidden">Email address</label>
+                                <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
+                                <button class="btn " type="button">Subscribe</button>
+                            </div>
+                            <div class="footerGeneral__veniAConocernos">
+                                <p>¡Come to meet us!</p>
+                                <iframe class="footerGeneral__veniAConocernos__googleMaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.8214633243174!2d-58.63167448447453!3d-34.63395178045155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb8bc768e1ea5%3A0x292c54382e196f96!2sPlaza%20Oeste%20Shopping!5e0!3m2!1ses!2sar!4v1633564318994!5m2!1ses!2sar"
+                                style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-between py-4 my-4 border-top">
+                    <p>&copy; 2021 Chilos Clothe & Fragance. All rights reserved.</p>
+                    <ul class="list-unstyled d-flex">
+                        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"/></svg></a></li>
+                        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
+                        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
+                    </ul>
+                </div>
+            </footer>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
