mas correciones 3 footer

--- a/PAGINAS/pijama.html
+++ b/PAGINAS/pijama.html
@@ -105,7 +105,7 @@
                     <div class="mainGeneral__contenedorConjunto__conjunto Cuatro">
                         <img src="../IMAGENES/pijama4.jpg" alt="foto">
                         <h2>Camisolín gris</h2>
-                        <h3>$5000</h3>
+                        <h3>$3300</h3>
                         <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
                     </div>
                     <div class="mainGeneral__contenedorConjunto__conjunto Cinco">
@@ -122,20 +122,20 @@
                     </div>
                     <div class="mainGeneral__contenedorConjunto__conjunto Siete">
                         <img src="../IMAGENES/pijama6.jpg" alt="foto">
-                        <h2>Titulo</h2>
-                        <h3>$5000</h3>
+                        <h2>Conjunto pijama Lirio</h2>
+                        <h3>$2800</h3>
                         <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
                     </div>
                     <div class="mainGeneral__contenedorConjunto__conjunto Ocho">
                         <img src="../IMAGENES/pijama11.jpg" alt="foto">
-                        <h2>Titulo</h2>
-                        <h3>$5000</h3>
+                        <h2>Conjunto pijama Lauren</h2>
+                        <h3>$3500</h3>
                         <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
                     </div>
                     <div class="mainGeneral__contenedorConjunto__conjunto Nueve">
                         <img src="../IMAGENES/pijama8.jpg" alt="foto">
-                        <h2>Titulo</h2>
-                        <h3>$5000</h3>
+                        <h2>Bata tigre</h2>
+                        <h3>$3000</h3>
                         <button class="mainGeneral__contenedorConjunto__button"><a class=" linkWpCompra" href="https://wa.me/1133123784?text=Venta%20indumentaria%20femenina%20aromas">Comprar</a></button>
                     </div>
                 </div>
