--- a/PAGINAS/PoliticasDeCambio.html
+++ b/PAGINAS/PoliticasDeCambio.html
@@ -115,18 +115,16 @@
                             <li class="nav-item mb-2"><a href="./PAGINAS/Envios.html" class="nav-link p-0 text-muted">Envíos</a></li>
                             <li class="nav-item mb-2"><a href="./PAGINAS/productos.html" class="nav-link p-0 text-muted">Productos</a></li>
                             <li class="nav-item mb-2"><a href="./PAGINAS/aromas.html" class="nav-link p-0 text-muted">Aromas</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-3">
+                        <h5 class="parrafoMapaDeSitio">Mapa de sitio</h5>
+                        <ul class="nav flex-column">
                             <li class="nav-item mb-2"><a href="./PAGINAS/conjunto.html" class="nav-link p-0 text-muted">Conjuntos</a></li>
                             <li class="nav-item mb-2"><a href="./PAGINAS/pijama.html" class="nav-link p-0 text-muted">Pijamas</a></li>
                             <li class="nav-item mb-2"><a href="./PAGINAS/PoliticasDeCambio.html" class="nav-link p-0 text-muted">Políticas de Cambio</a></li>
                             <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">!Veni a conocernos!</a></li>
                         </ul>
-                    </div>
-                    <div class="col-3">
-                        <div class="footerGeneral__veniAConocernos">
-                            <h5>¡Veni a conocernos!</h5>
-                            <iframe class="footerGeneral__veniAConocernos__googleMaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.8214633243174!2d-58.63167448447453!3d-34.63395178045155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb8bc768e1ea5%3A0x292c54382e196f96!2sPlaza%20Oeste%20Shopping!5e0!3m2!1ses!2sar!4v1633564318994!5m2!1ses!2sar"
-                            style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                        </div>
                     </div>
                     <div class="col-4 offset-1">
                         <form>
