ultimas modificaciones entrega

--- a/PAGINAS/Envios.html
+++ b/PAGINAS/Envios.html
@@ -14,7 +14,7 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
     crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <title>MI PAGINA WEB-Envios</title>
+    <title>Envíos</title>
 </head>
 <body class=" contenedorGeneral">
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
@@ -72,36 +72,45 @@
             </div>
     </header>
     <main class=" container mainGeneral dos  ">
-            <div class="d-grid gap-2">
-                <div class=" mainGeneral__partePrincipalParrafoEnvios p-2  border">
-                    <p class="  mx-auto" style="width: 200px;">ENVIOS</p>
-                    <p >Podés chequear el precio de envío al momento de hacer la compra 
-                        o contactarnos por privado 
-                    </p>
-                    <ul class="p-4 "> ¡Hacemos envíos a los siguientes destinos!
-                        <li>Merlo</li>
-                        <li>Paso del Rey</li>
-                        <li>Ituzaingó</li>
-                        <li>Moreno</li>
-                        <li>Padua</li>
-                        <li>Morón</li>
-                        <li>Castelar</li>
-                        <li>Villa Tesei</li>
-                        <li>Hurlingham</li>
-                        <li>Bella Vista</li>
-                        <li>San Miguel</li>
-                        <li>CABA</li>
-                        <li>Haedo</li>
-                        <li>Ramos Mejía</li>
-                        <li>Ciudadela</li>
-                        <li>Francisco  Álvarez</li>
-                        <li>General Rodríguez</li>
-                        <li>El Palomar</li>
-                        <li>San Justo</li>
-                        <li>Caseros</li>
-                    </ul>
+        <div class="container col-xxl-8 px-4 py-5">
+            <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+                <div class="col-10 col-sm-8 col-lg-6">
+                    <img src="../IMAGENES/stock.jpg" class="d-block mx-lg-auto img-fluid " alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+                </div>
+                <div class="col-lg-6 ">   
+                    <div class="d-grid gap-2">
+                        <div class=" mainGeneral__partePrincipalParrafoEnvios p-2  border">
+                            <p class="  mx-auto" style="width: 200px;"><strong>ENVIOS</strong></p>
+                            <p >Podés chequear el precio de envío al momento de hacer la compra 
+                                o contactarnos por privado 
+                            </p>
+                            <ul class="p-4 "><strong>¡Hacemos envíos a los siguientes destinos!</strong> 
+                                <li>Merlo</li>
+                                <li>Paso del Rey</li>
+                                <li>Ituzaingó</li>
+                                <li>Moreno</li>
+                                <li>Padua</li>
+                                <li>Morón</li>
+                                <li>Castelar</li>
+                                <li>Villa Tesei</li>
+                                <li>Hurlingham</li>
+                                <li>Bella Vista</li>
+                                <li>San Miguel</li>
+                                <li>CABA</li>
+                                <li>Haedo</li>
+                                <li>Ramos Mejía</li>
+                                <li>Ciudadela</li>
+                                <li>Francisco  Álvarez</li>
+                                <li>General Rodríguez</li>
+                                <li>El Palomar</li>
+                                <li>San Justo</li>
+                                <li>Caseros</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
+        </div>
     </main>
     <footer class="footerGeneral tres  ">
         <div class="container">
@@ -109,18 +118,18 @@
                     <div class="col-2">
                         <h5>Mapa de sitio</h5>
                         <ul class="nav flex-column">
-                            <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-muted">Inicio</a></li>
-                            <li class="nav-item mb-2"><a href="./PAGINAS/Envios.html" class="nav-link p-0 text-muted">Envíos</a></li>
-                            <li class="nav-item mb-2"><a href="./PAGINAS/productos.html" class="nav-link p-0 text-muted">Productos</a></li>
-                            <li class="nav-item mb-2"><a href="./PAGINAS/aromas.html" class="nav-link p-0 text-muted">Aromas</a></li>
+                            <li class="nav-item mb-2"><a href="../index.html" class="nav-link p-0 text-muted">Inicio</a></li>
+                            <li class="nav-item mb-2"><a href="../PAGINAS/Envios.html" class="nav-link p-0 text-muted">Envíos</a></li>
+                            <li class="nav-item mb-2"><a href="../PAGINAS/productos.html" class="nav-link p-0 text-muted">Productos</a></li>
+                            <li class="nav-item mb-2"><a href="../PAGINAS/aromas.html" class="nav-link p-0 text-muted">Aromas</a></li>
                         </ul>
                     </div>
                     <div class="col-3">
                         <h5 class="parrafoMapaDeSitio">Mapa de sitio</h5>
                         <ul class="nav flex-column">
-                            <li class="nav-item mb-2"><a href="./PAGINAS/conjunto.html" class="nav-link p-0 text-muted">Conjuntos</a></li>
-                            <li class="nav-item mb-2"><a href="./PAGINAS/pijama.html" class="nav-link p-0 text-muted">Pijamas</a></li>
-                            <li class="nav-item mb-2"><a href="./PAGINAS/PoliticasDeCambio.html" class="nav-link p-0 text-muted">Políticas de Cambio</a></li>
+                            <li class="nav-item mb-2"><a href="../PAGINAS/conjunto.html" class="nav-link p-0 text-muted">Conjuntos</a></li>
+                            <li class="nav-item mb-2"><a href="../PAGINAS/pijama.html" class="nav-link p-0 text-muted">Pijamas</a></li>
+                            <li class="nav-item mb-2"><a href="../PAGINAS/PoliticasDeCambio.html" class="nav-link p-0 text-muted">Políticas de Cambio</a></li>
                             <li class="nav-item mb-2 ">
                                 <a href="https://www.google.com.ar/maps/place/Plaza+Oeste+Shopping/@-34.6339474,-58.6316745,17z/data=!3m1!4b1!4m5!3m4!1s0x95bcb8bc768e1ea5:0x292c54382e196f96!8m2!3d-34.6339518!4d-58.6294858" 
                                     class="nav-link p-0 text-muted" target="_blank">!Veni a conocernos!
