--- a/PAGINAS/aromas.html
+++ b/PAGINAS/aromas.html
@@ -66,6 +66,9 @@
                         <li>
                             <a href="./PoliticasDeCambio.html">Políticas de cambio</a>
                         </li>
+                        <li>
+                            <a href="../PAGINAS/contacto.html">Contacto</a> 
+                        </li>
                     </ul>
                 </nav>
             </div>
