--- a/PAGINAS/PoliticasDeCambio.html
+++ b/PAGINAS/PoliticasDeCambio.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <title>MI PAGINA WEB</title>
+    <title>Políticas de Cambio</title>
 </head>
 <body class=" contenedorGeneral">
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
@@ -74,20 +74,20 @@
             <div class="d-grid gap-2">
                 <div class=" mainGeneral__partePrincipalParrafoPoliticas p-5  border">
                     <p class=" fs-5  mx-auto" style="width: 300px;">POLÍTICAS DE CAMBIO</p>
-                    <p>
+                    <p class="lh-lg">
                         Podés hacer el cambio de un producto si no estás conforme o si el talle no es el correcto, tenés 15 días de corrido desde la fecha de la compra. Para efectuarlo, la prenda debe estar en perfecto estado, sin uso y con la etiqueta puesta. 
                         De lo contrario no haremos el cambio.
                     </p>
-                    <ol class="p-3">¿Cómo realizarlo?
-                        <li>
-                            Podés contactarnos por Instagram (@chilosClothe&Perfume) o a través de nuestro chat
+                    <ol class="p-3"><strong>¿Cómo realizarlo?</strong>
+                        <li class="lh-lg">
+                            Podés contactarnos por Instagram (@chilosClothe&Perfume) o a través de nuestro chat.
                         </li>
-                        <li>
+                        <li class="lh-lg">
                             Una vez coordinado el cambio se realizará el envío de la prenda nueva. 
                             Dependiendo de la zona en la que vivas el mismo puede tener un costo (que deberá pagar el comprador).
                         </li>
                     </ol>
-                    <p>Cualquier duda que tengas, no dudes en contactarnos.</p>
+                    <p class="lh-lg">Cualquier duda que tengas, no dudes en contactarnos.</p>
                     
                     <p>¡Gracias por elegirnos! ❤</p>
                     
