--- a/PAGINAS/contacto.html
+++ b/PAGINAS/contacto.html
@@ -67,7 +67,7 @@
                             <a href="./PoliticasDeCambio.html">Políticas de cambio</a>
                         </li>
                         <li>
-                            <a href="./PAGINAS/contacto.html">Contacto</a> 
+                            <a href="../PAGINAS/contacto.html">Contacto</a> 
                         </li>
                     </ul>
                 </nav>
