--- a/PAGINAS/Envios.html
+++ b/PAGINAS/Envios.html
@@ -67,6 +67,9 @@
                         <li>
                             <a href="./PoliticasDeCambio.html">Políticas de cambio</a>
                         </li>
+                        <li>
+                            <a href="../PAGINAS/contacto.html">Contacto</a> 
+                        </li>
                     </ul>
                 </nav>
             </div>
