--- a/PAGINAS/pijama.html
+++ b/PAGINAS/pijama.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <title>MI PAGINA WEB-PIJAMAS</title>
+    <title>Pijamas</title>
 </head>
 <body class=" contenedorGeneral">
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
@@ -65,6 +65,9 @@
                             <a href="./Envios.html">Envíos</a>
                         <li>
                             <a href="./PoliticasDeCambio.html">Políticas de cambio</a>
+                        </li>
+                        <li>
+                            <a href="../PAGINAS/contacto.html">Contacto</a> 
                         </li>
                     </ul>
                 </nav>
